tests/sksl/errors/SelfReferentialInitializerExpression.sksl
float foo(float v) { return v; }
void main() { float x = foo(x); }
